# cookiecutter-fastapi

./: cookiecutter.json
hooks/: pre_gen_project.py
{{cookiecutter.project_slug}}/: Makefile  README.md  pyproject.toml
{{cookiecutter.project_slug}}/src/: main.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: exception_handlers.py  main_app.py  middlewares.py  routes.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/server/: dev_routes.py  main_app.py
{{cookiecutter.project_slug}}/tests/: conftest.py
{{cookiecutter.project_slug}}/tests/{{cookiecutter.project_slug}}/: __init__.py  test_routes.py
{{cookiecutter.project_slug}}/tests/{{cookiecutter.project_slug}}/server/: test_dev_route.py
